fixed searchbar z-index

--- a/src/components/GameList/GameList.module.scss
+++ b/src/components/GameList/GameList.module.scss
@@ -1,6 +1,6 @@
 .body {
   position: fixed;
-  z-index: 50;
+  z-index: 200;
   top: 0;
   left: 0;
   height: 100%;
